novo estilo navbar

--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -1,27 +1,35 @@
 nav {
-    background-color: #d4d4d8;
+    width: 100%;
+    background-color: #333;
 }
 
-nav > ul {
+nav ul {
+    width: 100%;
     list-style: none;
     display: flex;
-    justify-content: space-around;
-}
-
-nav > ul > li {
-    display: flex;
     align-items: center;
-    height: 100%;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
 }
 
-nav > ul > li * {
+nav li {
+    margin: 0 1rem;
+}
+
+nav a {
     padding: 0 2rem;
     text-decoration: none;
-    color: #18181b;
-    transition: all 0.2s ease-in-out;
+    color: #fff;
+    border-radius: 5px;
+    transition: background-color 0.3s;
 }
 
-nav > ul > li *:hover {
-    color: #fff;
-    background-color: #18181b;
+nav a:hover {
+    background-color: #555;
+}
+
+/* Example: Adding a subtle drop shadow on hover */
+nav a:hover {
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
